--- a/css/app.css
+++ b/css/app.css
@@ -9,4 +9,11 @@ html {
   box-sizing: inherit;
   font: inherit;
   margin: 0;
+  padding: 0;
+}
+body {
+  font-family: sans-serif;
+  font-weight: 400;
+  line-height: 1;
+  color: #555;
 }
