--- a/css/app.css
+++ b/css/app.css
@@ -12,9 +12,133 @@ html {
   margin: 0;
   padding: 0;
 }
+:root {
+  --primary-color: #e67e22;
+  --bg-color: #fdf2e9;
+}
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: #555;
+}
+
+/********************/
+/* General Section Reusable*/
+/********************/
+
+.hero-btn:link,
+.hero-btn:visited {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  padding: 1.6rem 3.2rem;
+  border-radius: 12px;
+
+  transition: all 300ms ease-in;
+}
+.btn--full:link,
+.btn--full:visited {
+  background-color: var(--primary-color);
+}
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: var(--primary-color);
+}
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: var(--bg-color);
+  color: #cf711f;
+  /* border: 5px solid #fff; */
+  box-shadow: inset 0 0 0 3px #fff;
+}
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/********************/
+/* Header Section */
+/********************/
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--bg-color);
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.logo {
+  height: 2.2rem;
+}
+
+/********************/
+/* Hero Section */
+/********************/
+
+.section-hero {
+  background-color: var(--bg-color);
+  padding: 4.8rem 0 9.6rem 0;
+}
+.hero-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+.hero-heading {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  color: #333;
+  margin-bottom: 3.2rem;
+}
+.hero-text {
+  font-size: 2rem;
+  line-height: 1.3;
+  margin-bottom: 4.8rem;
+}
+
+.hero-img img {
+  width: 100%;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+
+  margin-top: 8rem;
+}
+.delivered-imgs {
+  display: flex;
+}
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid var(--bg-color);
+}
+.delivered-imgs img:last-child {
+  margin-right: 0;
+}
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
 }
