--- a/css/app.css
+++ b/css/app.css
@@ -14,6 +14,7 @@ html {
 }
 :root {
   --primary-color: #e67e22;
+  --secondary-color: #cf711f;
   --bg-color: #fdf2e9;
 }
 body {
@@ -35,7 +36,7 @@ body {
   text-decoration: none;
   display: inline-block;
   padding: 1.6rem 3.2rem;
-  border-radius: 12px;
+  border-radius: 9px;
 
   transition: all 300ms ease-in;
 }
@@ -45,7 +46,7 @@ body {
 }
 .btn--full:hover,
 .btn--full:active {
-  background-color: #cf711f;
+  background-color: var(--secondary-color);
 }
 .btn--outline:link,
 .btn--outline:visited {
@@ -55,7 +56,7 @@ body {
 .btn--outline:hover,
 .btn--outline:active {
   background-color: var(--bg-color);
-  color: #cf711f;
+  color: var(--secondary-color);
   /* border: 5px solid #fff; */
   box-shadow: inset 0 0 0 3px #fff;
 }
@@ -63,6 +64,41 @@ body {
   margin-right: 1.6rem !important;
 }
 
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.heading-primary,
+.heading-secondary {
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  color: #333;
+}
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+}
+.subheading {
+  /* display: block; */
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: var(--secondary-color);
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75;
+}
 /********************/
 /* Header Section */
 /********************/
@@ -79,6 +115,41 @@ body {
   height: 2.2rem;
 }
 
+/********************/
+/* Nav Section */
+/********************/
+
+.nav-lists {
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+  list-style: none;
+}
+
+.nav-link:link,
+.nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 300ms ease-in;
+}
+.nav-link:hover,
+.nav-link:active {
+  color: var(--secondary-color);
+}
+.nav-link.nav-cta:link,
+.nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  background-color: var(--primary-color);
+  color: #fff;
+}
+.nav-link.nav-cta:hover,
+.nav-link.nav-cta:active {
+  background-color: var(--secondary-color);
+}
 /********************/
 /* Hero Section */
 /********************/
@@ -99,9 +170,7 @@ body {
 .hero-heading {
   font-size: 5.2rem;
   line-height: 1.05;
-  font-weight: 700;
-  letter-spacing: -0.5px;
-  color: #333;
+
   margin-bottom: 3.2rem;
 }
 .hero-text {
@@ -139,6 +208,27 @@ body {
   font-weight: 600;
 }
 .delivered-text span {
-  color: #cf711f;
+  color: var(--secondary-color);
   font-weight: 700;
+}
+/********************/
+/* How Section */
+/********************/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-img {
+  width: 35%;
+}
+
+.step-text {
+}
+.step-no {
+}
+
+.step-decs {
+}
+.step-img-box {
 }
