--- a/css/app.css
+++ b/css/app.css
@@ -1,104 +1,3 @@
-html {
-  box-sizing: border-box;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  font-size: 62.5%;
-}
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-  font: inherit;
-  margin: 0;
-  padding: 0;
-}
-:root {
-  --primary-color: #e67e22;
-  --secondary-color: #cf711f;
-  --bg-color: #fdf2e9;
-}
-body {
-  font-family: "Rubik", sans-serif;
-  font-weight: 400;
-  line-height: 1;
-  color: #555;
-}
-
-/********************/
-/* General Section Reusable*/
-/********************/
-
-.hero-btn:link,
-.hero-btn:visited {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #fff;
-  text-decoration: none;
-  display: inline-block;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-
-  transition: all 300ms ease-in;
-}
-.btn--full:link,
-.btn--full:visited {
-  background-color: var(--primary-color);
-}
-.btn--full:hover,
-.btn--full:active {
-  background-color: var(--secondary-color);
-}
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: var(--primary-color);
-}
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: var(--bg-color);
-  color: var(--secondary-color);
-  /* border: 5px solid #fff; */
-  box-shadow: inset 0 0 0 3px #fff;
-}
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
-.container {
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-.heading-primary,
-.heading-secondary {
-  font-weight: 700;
-  letter-spacing: -0.5px;
-  color: #333;
-}
-.heading-secondary {
-  font-size: 4.4rem;
-  line-height: 1.2;
-  margin-bottom: 9.6rem;
-}
-
-.heading-tertiary {
-}
-.subheading {
-  /* display: block; */
-  font-size: 1.6rem;
-  font-weight: 500;
-  color: var(--secondary-color);
-  text-transform: uppercase;
-  margin-bottom: 1.6rem;
-  letter-spacing: 0.75;
-}
 /********************/
 /* Header Section */
 /********************/
@@ -219,16 +118,48 @@ body {
   padding: 9.6rem 0;
 }
 
-.step-img {
-  width: 35%;
-}
-
-.step-text {
-}
 .step-no {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
 }
 
 .step-decs {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
 .step-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.step-img-box::before {
+  width: 60%;
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
 }
