--- a/css/app.css
+++ b/css/app.css
@@ -189,3 +189,29 @@
 .step-img {
   width: 35%;
 }
+
+/********************/
+/* Meal Section */
+/********************/
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal-img {
+  width: 100%;
+}
+.meal-title {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+  color: #333;
+}
+.meal-features {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.meal-feature {
+  font-size: 1.8rem;
+}
