--- a/css/general.css
+++ b/css/general.css
@@ -78,6 +78,9 @@ body {
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
 }
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
 .grid--center-v {
   align-items: center;
 }
