--- a/css/general.css
+++ b/css/general.css
@@ -60,10 +60,31 @@ body {
   /* border: 5px solid #fff; */
   box-shadow: inset 0 0 0 3px #fff;
 }
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: var(--primary-color);
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 300ms ease-in;
+}
+.link:hover,
+.link:active {
+  color: var(--secondary-color);
+  border-bottom: 1px solid transparent;
+}
+
+/* helper classes */
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
-
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+.center-text {
+  text-align: center;
+}
 .container {
   max-width: 120rem;
   margin: 0 auto;
@@ -85,7 +106,8 @@ body {
   align-items: center;
 }
 .heading-primary,
-.heading-secondary {
+.heading-secondary,
+.heading-tertiary {
   font-weight: 700;
   letter-spacing: -0.5px;
   color: #333;
@@ -102,7 +124,7 @@ body {
   margin-bottom: 3.2rem;
 }
 .subheading {
-  /* display: block; */
+  display: block;
   font-size: 1.6rem;
   font-weight: 500;
   color: var(--secondary-color);
