--- a/css/app.css
+++ b/css/app.css
@@ -431,7 +431,26 @@
 }
 
 .cta-textbox {
+  color: #2e1907;
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
 }
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+.cta .heading-secondary {
+  color: #2e1907;
+  margin-bottom: 3.2rem;
+}
+.cta-form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
 .cta-img {
   background-image: linear-gradient(
       to right bottom,
