--- a/css/app.css
+++ b/css/app.css
@@ -426,7 +426,6 @@
   border-radius: 11px;
 
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
-  height: 50rem;
   overflow: hidden;
 }
 
@@ -441,7 +440,7 @@
 }
 
 .cta .heading-secondary {
-  color: #2e1907;
+  color: inherit;
   margin-bottom: 3.2rem;
 }
 .cta-form {
@@ -449,6 +448,32 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 3.2rem;
   row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  font-size: 1.8rem;
+  width: 100%;
+  padding: 1.2rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: var(--bg-color);
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.cta-form input::placeholder {
+  color: #aaa;
+}
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgb(253, 242, 233, 0.5);
 }
 
 .cta-img {
