--- a/css/general.css
+++ b/css/general.css
@@ -12,6 +12,10 @@ html {
   margin: 0;
   padding: 0;
 }
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgb(230, 126, 34, 0.5);
+}
 :root {
   --primary-color: #e67e22;
   --secondary-color: #cf711f;
@@ -27,22 +31,27 @@ body {
 /********************/
 /* General Section Reusable*/
 /********************/
-
+.btn,
 .btn:link,
 .btn:visited {
+  display: inline-block;
   font-size: 2rem;
   font-weight: 600;
-  color: #fff;
   text-decoration: none;
-  display: inline-block;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
   transition: all 300ms ease-in;
+
+  /* only for btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 .btn--full:link,
 .btn--full:visited {
   background-color: var(--primary-color);
+  color: rgb(255, 255, 255);
 }
 .btn--full:hover,
 .btn--full:active {
@@ -59,6 +68,19 @@ body {
   color: var(--secondary-color);
   /* border: 5px solid #fff; */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn-form {
+  color: var(--bg-color);
+  background-color: #45260a;
+  align-self: end;
+  padding: 1.3rem;
+
+  transition: all 300ms ease-in;
+}
+.btn-form:hover {
+  background-color: #fff;
+  color: #555;
 }
 .link:link,
 .link:visited {
