--- a/css/queries.css
+++ b/css/queries.css
@@ -40,3 +40,52 @@
     padding: 9.6rem 3.2rem;
   }
 }
+
+/* below 944px */
+
+@media (max-width: 59em) {
+  html {
+    font-size: 50%;
+  }
+  .hero-container {
+    grid-template-columns: 1fr;
+    padding: 0 8rem;
+    gap: 6.4rem;
+  }
+  .hero-description-box,
+  .hero-img {
+    text-align: center;
+  }
+
+  .hero-img img {
+    width: 60%;
+  }
+  .delivered-meals {
+    justify-content: center;
+    margin-top: 3.2rem;
+  }
+  .featured-logos img {
+    height: 2.4rem;
+  }
+  .step-no {
+    font-size: 7.4rem;
+  }
+  .tag-box {
+    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
+  }
+  .section-testimonials {
+    grid-template-columns: 1fr;
+  }
+  .testimonial-gallery {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  .cta {
+    grid-template-columns: 3fr 2fr;
+  }
+  .cta-form {
+    grid-template-columns: 1fr;
+  }
+  .btn--form {
+    margin-top: 1.2rem;
+  }
+}
