--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,7 @@
   background-color: var(--bg-color);
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -48,6 +49,24 @@
 .nav-link.nav-cta:hover,
 .nav-link.nav-cta:active {
   background-color: var(--secondary-color);
+}
+
+/* Mobile nav */
+.btn-mobile-nav {
+  border: none;
+  cursor: pointer;
+  background-color: none;
+
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close"] {
+  display: none;
 }
 /********************/
 /* Hero Section */
