--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow: hidden;
   scroll-behavior: smooth;
   font-size: 62.5%;
 }
@@ -26,6 +26,7 @@ body {
   font-weight: 400;
   line-height: 1;
   color: #555;
+  overflow: hidden;
 }
 
 /********************/
